--- a/styles/style.css
+++ b/styles/style.css
@@ -684,6 +684,63 @@ margin-left: 10px;
   color: hsla(110,50%,30%,1);
 }
 
+/* 새소식 */
+.news-title{
+  color: #e85e2c;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.news{
+  background-color: yellow;
+  margin-top: 20px;
+  position: relative;
+}
+.news::before{
+  content: "";
+  position: absolute;
+  top: 35px;
+  left: 0;
+  width: 80%;
+  height: 1px;
+  background: #aaa linear-gradient(to right, #ccc,#fff);
+}
+.news-link{
+  background-color: pink;
+}
+.news-item{
+  background-color:skyblue;
+  margin-top: 35px;
+  padding-left: 130px;
+  position: relative;
+}
+.news-item-title{
+  background-color:orange;
+  font-weight: 500;
+}
+.news-item-date{
+  background-color:lightgreen;
+  display: block;
+  margin: 5px 0 10px;
+}
+.news-item-brief{
+  background-color:darksalmon;
+  line-height: 1.5;
+}
+.news-item-thumbnail{
+  background-color:lightpink;
+  /* 부모를 기준으로 좌표를 주어야 움직임  */
+  position: absolute;
+  top:0;
+  left:0;
+  text-align: center;
+}
+.news-more{
+  background-color:aqua;
+  position: absolute;
+  top:-8px;
+  right:-8px;
+  padding:8px;
+}
 /* 슬로건 */
 .slogan {
   background: skyblue;
