--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import url(./reset.css);
 @import url(./fonts.css);
 @import url(./fontello.css);
+@import url(./module.css);
 
 /* 숨김 콘텐츠 */
 .a11y-hidden,
@@ -706,6 +707,7 @@ margin-left: 10px;
 }
 .news-link{
   background-color: pink;
+  display: block;
 }
 .news-item{
   background-color:skyblue;
@@ -719,6 +721,8 @@ margin-left: 10px;
 }
 .news-item-date{
   background-color:lightgreen;
+  /* .news-link랑 .news-item-date에 display:block; 준 이유 */
+  /* time이 인라인 속성이라 block 줘야 마진 탑 바텀이 들어감 */
   display: block;
   margin: 5px 0 10px;
 }
@@ -734,6 +738,11 @@ margin-left: 10px;
   left:0;
   text-align: center;
 }
+.news-item-thumbnail img{
+  /* 이미지는 인라인블록 */
+  box-shadow: 0 15px 10px 5px #ccc;
+  margin-bottom: 15px;
+}
 .news-more{
   background-color:aqua;
   position: absolute;
@@ -741,6 +750,92 @@ margin-left: 10px;
   right:-8px;
   padding:8px;
 }
+
+/* 신규 이벤트 및 관련 사이트 */
+.event{
+  border-bottom:1px solid #aaa;
+}
+.event-title{
+  display: inline-block;
+}
+
+.event-button-wrapper{
+  background-color: yellow;
+  overflow: hidden;
+  height: 20px;
+  /* 갭 없애려고 */
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap:5px;
+  float: right;
+}
+
+/* IR(Image Replacement)기법 */
+.event-button{
+  width: 19px;
+  /* 오버플로우 되는 글자가 일부 보이기 때문 */
+  height: 18px;
+  border: 0;
+  padding: 18px 0 0 0;
+  background: url(./images/back_forward.png) no-repeat;
+}
+.event-button:focus{
+  outline-offset: -2px;
+}
+.event-button-next{
+  background-position: -36px 0;
+}
+
+.event-thumbnail, 
+.event-brief{
+margin: 10px 0;
+}
+.event-thumbnail img{
+  border: 1px solid #aaa;
+  box-shadow: 5px 5px 0 0 #ccc;
+}
+.event-brief{
+  line-height: 1.5;
+}
+.related{
+  margin-top: 10px;
+}
+.related-list{
+  background-color: #fff;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  margin-top: 10px;
+  height: 27px;
+  overflow: hidden;
+  padding-top: 0;
+  transition: height 400ms 0ms, padding 400ms 400ms;
+  /* transition-property:background-color ;
+  transition-duration: 2000ms;
+  transition-delay: 0ms; */
+}
+.related-list li{
+  background-color: yellow;
+  height: 25px;
+  /* 다른 방법으로 배치 가능 */
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding: 0 5px;
+}
+.related-list a{
+  background-color: pink;
+  flex-grow: 1;
+  padding: 0 10px;
+}
+.related-list:hover,
+.related-list:focus{
+  background-color: yellow;
+  height:147px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 /* 슬로건 */
 .slogan {
   background: skyblue;
