--- a/practice.css
+++ b/practice.css
@@ -1,14 +1,23 @@
-.box {
-  display: inline-block;
-  width: 100px;
+.box-container{
+  border: 2px solid red;
   height: 100px;
-  background: red;
-  color: white;
+  /* width: 50px; */
+  display: flex;
+  flex-flow: column nowrap;
+  /* justify-content: space-evenly;  */
+  align-items: center;
+  
 }
-
+.box {
+  /* width: 100px;
+  height: 100px; */
+  background: skyblue;
+  color: black;
+}
+/* 
 #two {
   position: relative;
   top: 20px;
   left: 20px;
   background: blue;
-}
+} */
