--- a/styles/style.css
+++ b/styles/style.css
@@ -912,8 +912,40 @@ margin: 10px 0;
 /* 슬로건 */
 .slogan {
   background: skyblue;
-  height: 10vh;
   clear: both;
+  position: relative;
+  padding: 15px 100px 15px 180px;
+}
+.slogan-title{
+  background-color: pink;
+  width: 110px;
+  height: 83px;
+  line-height: 83px;
+  text-align: center;
+  position: absolute;
+  bottom: -25px;
+  left: 35px;
+}
+.slogan-title::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("./images/coffee.png") no-repeat 0 0;
+}
+.slogan-content {
+  color: #a09784;
+}
+
+.slogan-content q::before {
+  display: inline-block;
+  font-size: 3rem;
+  transform: translateY(10px);
+}
+.slogan-content q::after {
+  content: "";
 }
 /* 푸터 */
 .footer {
@@ -925,6 +957,41 @@ margin: 10px 0;
 }
 
 .footer-inner {
-  background: silver;
-  height: 15vh;
+  background: pink;
+  display: flex;
+  flex-flow: row nowrap;
+  gap:20px;
+  padding: 20px 0;
+}
+.footer-logo{
+background-color: aqua;
+width: 150px;
+padding: 20px 0 0 35px;
+}
+
+.footer-inner-wrapper{
+  background-color: lime;
+  flex: 1 1 auto;
+}
+.guide-list{
+  display: flex;
+  flex-flow: row nowrap;
+  background-color: #7b8385;
+  color: #fff;
+  padding: 4px 45px;
+  justify-content: space-between;
+  text-transform: uppercase;
+  border-radius: 30px;
+}
+.guide-list a{
+  display: block;
+  padding: 6px 10px;
+}
+.address, .copyright{
+  display: block;
+  font-size: 1.3rem;
+  margin-top: 10px;
+}
+.badge-wrapper{
+  background-color: salmon;
 }
